<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">자동전화 SMS</string>
    <string name="phone_number_hint">전화번호 입력</string>
    <string name="make_call">전화걸기</string>
    <string name="view_history">SMS 이력 새로고침</string>
    <string name="sms_response_history">SMS 응답 기록</string>
    <string name="no_records">저장된 SMS 기록이 없습니다</string>
    <string name="permission_required">권한이 필요합니다</string>
    <string name="all_permissions_granted">모든 권한이 허용되었습니다</string>
    <string name="title">자동 전화걸기와 SMS 수신</string>
    <string name="start_button">시작</string>
    <string name="server_address_hint">서버 주소 입력 (예: http://...)</string>
</resources>
